deploy/read/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-deployment
  labels:
    app: read
spec:
  replicas: 1
  selector:
    matchLabels:
      app: read
  template:
    metadata:
      labels:
        app: read
    spec:
      containers:
        - name: read
          image: ${IMAGE}
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: read-service
spec:
  selector:
    app: read
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: read-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: read-service
                port:
                  number: 80
